{
  "version": 4,
  "terraform_version": "0.12.18",
  "serial": 18,
  "lineage": "7d073226-5728-e5d2-32d7-961f86e9aa91",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "vpc_id",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:022705868532:vpc/vpc-09683c78cc1e578ca",
            "cidr_block": "10.126.4.0/24",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-09a966daf6fa1b7ab",
                "cidr_block": "10.126.4.0/24",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-8f04f7f5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "Main_Prod_DMZ_VPC"
                ]
              }
            ],
            "id": "vpc-09683c78cc1e578ca",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-04c5fac3abd225c3c",
            "owner_id": "022705868532",
            "state": "available",
            "tags": {
              "AWS_Account": "EH_Adv_Main",
              "Client": "Shared",
              "Name": "Main_Prod_DMZ_VPC",
              "Organization": "Advantasure",
              "Project": "Symphony"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "aws_security_alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:022705868532:loadbalancer/app/Symphony-MaintenancePage-ALB/c7d362c989ead765",
            "arn_suffix": "app/Symphony-MaintenancePage-ALB/c7d362c989ead765",
            "dns_name": "internal-Symphony-MaintenancePage-ALB-293642408.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:022705868532:loadbalancer/app/Symphony-MaintenancePage-ALB/c7d362c989ead765",
            "idle_timeout": 600,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Symphony-MaintenancePage-ALB",
            "security_groups": [
              "sg-0c4c166f67b24894d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0046c352bb53a02af"
              },
              {
                "subnet_id": "subnet-0a0bbc5aac95fea60"
              }
            ],
            "subnets": [
              "subnet-0046c352bb53a02af",
              "subnet-0a0bbc5aac95fea60"
            ],
            "tags": {
              "app_version": "1.0",
              "backup_frequency": "Never",
              "backup_vault": "-N/A-",
              "billing_type": "Client",
              "client_name": "Shared",
              "environment_name": "Production",
              "os_name": "Amazon Linux 2",
              "os_type": "Linux",
              "project_name": "Symphony",
              "security_zone": "DMZ",
              "service_name": "EC2",
              "service_role": "MaintenancePage"
            },
            "vpc_id": "vpc-09683c78cc1e578ca",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "front_end",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:022705868532:listener/app/Symphony-MaintenancePage-ALB/c7d362c989ead765/1817697e9ccb66c5",
            "certificate_arn": "arn:aws:acm:us-east-1:022705868532:certificate/ab398988-b959-4c5c-a526-0563e31e4eda",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:022705868532:targetgroup/Symphony-MaintenancePage-TG/ce0d0b09dd454158",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:022705868532:listener/app/Symphony-MaintenancePage-ALB/c7d362c989ead765/1817697e9ccb66c5",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:022705868532:loadbalancer/app/Symphony-MaintenancePage-ALB/c7d362c989ead765",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "timeouts": null
          },
          "dependencies": [
            "aws_alb.aws_security_alb",
            "aws_alb_target_group.security-group",
            "aws_security_group.security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "httptohttps",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:022705868532:listener/app/Symphony-MaintenancePage-ALB/c7d362c989ead765/6c2f5f900c89d3d0",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:022705868532:listener/app/Symphony-MaintenancePage-ALB/c7d362c989ead765/6c2f5f900c89d3d0",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:022705868532:loadbalancer/app/Symphony-MaintenancePage-ALB/c7d362c989ead765",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_alb.aws_security_alb",
            "aws_security_group.security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "security-group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:022705868532:targetgroup/Symphony-MaintenancePage-TG/ce0d0b09dd454158",
            "arn_suffix": "targetgroup/Symphony-MaintenancePage-TG/ce0d0b09dd454158",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:022705868532:targetgroup/Symphony-MaintenancePage-TG/ce0d0b09dd454158",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "Symphony-MaintenancePage-TG",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 300,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-09683c78cc1e578ca"
          },
          "dependencies": [
            "aws_alb.aws_security_alb",
            "aws_security_group.security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:022705868532:security-group/sg-0c4c166f67b24894d",
            "description": "Security Group for maintenance page setup",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c4c166f67b24894d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "Symphony_MaintenancePage_Linux-SG",
            "name_prefix": null,
            "owner_id": "022705868532",
            "revoke_rules_on_delete": false,
            "tags": {
              "app_version": "1.0",
              "backup_frequency": "Never",
              "backup_vault": "-N/A-",
              "billing_type": "Client",
              "client_name": "Shared",
              "environment_name": "Production",
              "os_name": "Amazon Linux 2",
              "os_type": "Linux",
              "project_name": "Symphony",
              "security_zone": "DMZ",
              "service_name": "EC2",
              "service_role": "MaintenancePage"
            },
            "timeouts": null,
            "vpc_id": "vpc-09683c78cc1e578ca"
          }
        }
      ]
    }
  ]
}